Initial full code using Apache HTTP client