@@ -18,11 +18,11 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
@@ -35,7 +35,6 @@ import javax.management.JMException;
 import javax.management.MBeanInfo;
 import javax.management.MBeanServer;
 import javax.management.ObjectName;
-import javax.net.ssl.HttpsURLConnection;
 import javax.servlet.RequestDispatcher;
 import javax.servlet.ServletContext;
 import javax.servlet.ServletException;
@@ -44,10 +43,10 @@ import javax.servlet.http.HttpServletResponse;
 
 import net.community.chest.gitcloud.facade.ServletUtils;
 
-import org.apache.commons.collections15.ExtendedCollectionUtils;
 import org.apache.commons.io.ExtendedIOUtils;
 import org.apache.commons.io.HexDump;
 import org.apache.commons.io.IOUtils;
+import org.apache.commons.io.input.ByteArrayAccumulatingInputStream;
 import org.apache.commons.io.output.AsciiLineOutputStream;
 import org.apache.commons.io.output.ByteArrayOutputStream;
 import org.apache.commons.io.output.TeeOutputStream;
@@ -55,8 +54,24 @@ import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.Validate;
 import org.apache.commons.logging.ExtendedLogUtils;
-import org.apache.commons.net.ssl.SSLUtils;
+import org.apache.http.Header;
+import org.apache.http.HttpEntity;
+import org.apache.http.HttpMessage;
+import org.apache.http.HttpRequest;
+import org.apache.http.HttpResponse;
+import org.apache.http.ProtocolException;
+import org.apache.http.client.HttpClient;
+import org.apache.http.client.RedirectStrategy;
+import org.apache.http.client.methods.HttpEntityEnclosingRequestBase;
+import org.apache.http.client.methods.HttpGet;
+import org.apache.http.client.methods.HttpPost;
+import org.apache.http.client.methods.HttpRequestBase;
+import org.apache.http.client.methods.HttpUriRequest;
 import org.apache.http.conn.HttpClientConnectionManager;
+import org.apache.http.entity.InputStreamEntity;
+import org.apache.http.impl.client.CloseableHttpClient;
+import org.apache.http.impl.client.HttpClientBuilder;
+import org.apache.http.protocol.HttpContext;
 import org.eclipse.jgit.http.server.GitSmartHttpTools;
 import org.eclipse.jgit.lib.Constants;
 import org.springframework.beans.factory.annotation.Value;
@@ -84,43 +99,20 @@ public class GitController extends RefreshedContextAttacher {
                                             + SystemPropertyUtils.VALUE_SEPARATOR
                                             + DEFAULT_LOOP_DETECT_TIMEOUT
                                             + SystemPropertyUtils.PLACEHOLDER_SUFFIX;
-    public static final String  URL_REDIRECT_CONNECT_TIMEOUT="gitcloud.frontend.git.controller.url.redirect.conn.timeout";
-        public static final int DEFAULT_URL_REDIRECT_CONNECT_TIMEOUT=5 * 1000;  // msec.
-        private static final String URL_REDIRECT_CONNECT_TIMEOUT_VALUE=SystemPropertyUtils.PLACEHOLDER_PREFIX
-                                            + URL_REDIRECT_CONNECT_TIMEOUT
-                                            + SystemPropertyUtils.VALUE_SEPARATOR
-                                            + DEFAULT_URL_REDIRECT_CONNECT_TIMEOUT
-                                            + SystemPropertyUtils.PLACEHOLDER_SUFFIX;
-    public static final String  URL_REDIRECT_READ_TIMEOUT="gitcloud.frontend.git.controller.url.redirect.read.timeout";
-        public static final int DEFAULT_URL_REDIRECT_READ_TIMEOUT=30 * 1000;  // msec.
-        private static final String URL_REDIRECT_READ_TIMEOUT_VALUE=SystemPropertyUtils.PLACEHOLDER_PREFIX
-                                            + URL_REDIRECT_READ_TIMEOUT
-                                            + SystemPropertyUtils.VALUE_SEPARATOR
-                                            + DEFAULT_URL_REDIRECT_READ_TIMEOUT
-                                            + SystemPropertyUtils.PLACEHOLDER_SUFFIX;
 
     private final MBeanServer   mbeanServer;
     private final HttpClientConnectionManager   connsManager;
     private final long  loopRetryTimeout;
-    private final int   urlRedirectConnectTimeout, urlRedirectReadTimeout;
     private volatile long    initTimestamp=System.currentTimeMillis();
     private volatile boolean    loopDetected;
 
     @Inject
     public GitController(MBeanServer localMbeanServer,
             HttpClientConnectionManager connectionsManager,
-            @Value(LOOP_DETECT_TIMEOUT_VALUE) long loopDetectTimeout,
-            @Value(URL_REDIRECT_CONNECT_TIMEOUT_VALUE) int redirectConnectTimeout,
-            @Value(URL_REDIRECT_READ_TIMEOUT_VALUE) int redirectReadTimeout) {
+            @Value(LOOP_DETECT_TIMEOUT_VALUE) long loopDetectTimeout) {
         mbeanServer = Validate.notNull(localMbeanServer, "No MBean server", ArrayUtils.EMPTY_OBJECT_ARRAY);
         connsManager = Validate.notNull(connectionsManager, "No connections manager", ArrayUtils.EMPTY_OBJECT_ARRAY);
         loopRetryTimeout = loopDetectTimeout;
-        
-        Validate.isTrue(redirectConnectTimeout > 0, "Invalid URL redirect connect timeout: %d", redirectConnectTimeout);
-        urlRedirectConnectTimeout = redirectConnectTimeout;
-
-        Validate.isTrue(redirectReadTimeout > 0, "Invalid URL redirect read timeout: %d", redirectReadTimeout);
-        urlRedirectReadTimeout = redirectReadTimeout;
     }
 
     @Override
@@ -179,11 +171,11 @@ public class GitController extends RefreshedContextAttacher {
          * In Tomcat, the 'crossContext' attribute in 'Context' element of
          * 'TOMCAT_HOME\conf\context.xml' must be set to true, to enable cross-context 
          */
-        URL url=resolveTargetRepository(method, req);
+        URI uri=resolveTargetRepository(method, req);
         if (loopDetected) {
             // TODO see if can find a more efficient way than splitting and re-constructing
             ServletContext  curContext=req.getServletContext();
-            String          urlPath=url.getPath(), urlQuery=url.getQuery();
+            String          urlPath=uri.getPath(), urlQuery=uri.getQuery();
             String[]        comps=StringUtils.split(urlPath, '/');
             String          appName=comps[0];
             ServletContext  loopContext=Validate.notNull(curContext.getContext("/" + appName), "No cross-context for %s", appName);
@@ -204,114 +196,116 @@ public class GitController extends RefreshedContextAttacher {
                            + " forwarded to " + loopContext.getContextPath() + "/" + redirectPath);
             }
         } else {
-            executeRemoteRequest(method, url, req, rsp);
+            executeRemoteRequest(method, uri, req, rsp);
         }
     }
-    
-    private void executeRemoteRequest(final RequestMethod method, URL url, final HttpServletRequest req, HttpServletResponse rsp) throws IOException {
-        if (logger.isDebugEnabled()) {
-            logger.debug("executeRemoteRequest(" + method + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "]"
-                       + " redirected to " + url.toExternalForm());
-        }
 
-        HttpURLConnection   conn=openTargetConnection(method, url);
-        try {
-            Map<String,String>  reqHeaders=copyRequestHeadersValues(req, conn);
-            if (RequestMethod.POST.equals(method)) {
-                transferPostedData(method, req, conn, reqHeaders);
+    // TODO move this to some 'util' artifact
+    public static final RedirectStrategy    NO_REDIRECTION=new RedirectStrategy() {
+            @Override
+            public boolean isRedirected(HttpRequest request, HttpResponse response, HttpContext context) throws ProtocolException {
+                return false;
             }
             
-            int statusCode=conn.getResponseCode();
-            if ((statusCode < HttpServletResponse.SC_OK) || (statusCode >= HttpServletResponse.SC_MULTIPLE_CHOICES)) {
-                String    rspMsg=conn.getResponseMessage();
-                logger.warn("executeRemoteRequest(" + method + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "]"
-                          + " bad status code (" + statusCode + ")"
-                          + " on redirection to " + url.toExternalForm() + ": " + rspMsg);
-                rsp.sendError(statusCode, rspMsg);
-            } else {
-                rsp.setStatus(statusCode);
-
-                Map<String,String>  rspHeaders=copyResponseHeadersValues(conn, req, rsp);
-                transferBackendResponse(method, req, rsp, conn, rspHeaders);
+            @Override
+            public HttpUriRequest getRedirect(HttpRequest request, HttpResponse response, HttpContext context) throws ProtocolException {
+                throw new ProtocolException("getRedirect(" + request + ")[" + response + "] N/A");
             }
+        };
+    private void executeRemoteRequest(RequestMethod method, URI uri, HttpServletRequest req, HttpServletResponse rsp) throws IOException {
+        if (logger.isDebugEnabled()) {
+            logger.debug("executeRemoteRequest(" + method + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "]"
+                       + " redirected to " + uri.toASCIIString());
+        }
+
+        HttpRequestBase     request=resolveRequest(method, uri);
+        CloseableHttpClient client=HttpClientBuilder.create()
+                                .setConnectionManager(connsManager)
+                                .setRedirectStrategy(NO_REDIRECTION)
+                                .build()
+                                ;
+        try {
+            executeRemoteRequest(client, request, req, rsp);
         } finally {
-            conn.disconnect();
+            client.close();
         }
     }
 
-    private void transferPostedData(
-                final RequestMethod method, final HttpServletRequest req, HttpURLConnection conn, Map<String,String> reqHeaders)
+    private void executeRemoteRequest(HttpClient client, HttpRequestBase request, HttpServletRequest req, HttpServletResponse rsp) throws IOException {
+        Map<String,String>  reqHeaders=copyRequestHeadersValues(req, request);
+        final HttpResponse  response;
+        if (HttpPost.METHOD_NAME.equalsIgnoreCase(request.getMethod())) {
+            response = transferPostedData(client, (HttpEntityEnclosingRequestBase) request, req, reqHeaders);
+        } else {
+            response = client.execute(request);
+        }
+        
+        Map<String,String>  rspHeaders=copyResponseHeadersValues(req, response, rsp);
+        transferBackendResponse(req, response, rsp, rspHeaders);
+    }
+
+    private HttpResponse transferPostedData(HttpClient client, HttpEntityEnclosingRequestBase postRequest, final HttpServletRequest req, Map<String,String> reqHeaders)
             throws IOException {
-        final URL   url=conn.getURL();
         InputStream postData=req.getInputStream();
         try {
-            ByteArrayOutputStream  bytesStream=null;
-            OutputStream           postTarget=conn.getOutputStream();
-            String                 encoding=reqHeaders.get("Content-Encoding");
+            // TODO see what we can do for large amount of data
             if (logger.isTraceEnabled()) {
-                bytesStream = new ByteArrayOutputStream();
-                postTarget = new TeeOutputStream(postTarget, bytesStream);
+                postData = new ByteArrayAccumulatingInputStream(postData);
             }
+            postRequest.setEntity(new InputStreamEntity(postData));
 
-            // TODO handle large content sizes - see http://stackoverflow.com/questions/2793150/how-to-use-java-net-urlconnection-to-fire-and-handle-http-requests
-            // TODO consider switching to Apache HTTP client
-            try {
-                long    cpyLen=IOUtils.copyLarge(postData, postTarget);
-                if (logger.isTraceEnabled()) {
-                    logger.trace("transferPostedData(" + method + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "]"
-                               + " copied " + cpyLen + " bytes (encoding=" + encoding + ")"
-                               + " to " + url.toExternalForm());
+            HttpResponse    response=client.execute(postRequest);
+            if (logger.isTraceEnabled() && (postData instanceof ByteArrayAccumulatingInputStream)) {
+                final String    method=postRequest.getMethod(), encoding=reqHeaders.get("Content-Encoding");
+                byte[]          postedBytes=((ByteArrayAccumulatingInputStream) postData).toByteArray();
+                logger.trace("transferPostedData(" + method + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "]"
+                           + " copied " + postedBytes.length + " bytes (encoding=" + encoding + ")"
+                           + " to " + postRequest.getURI().toASCIIString());
 
-                    if (bytesStream != null) {
-                        if ("gzip".equalsIgnoreCase(encoding)) {
-                            byte[]      gzBytes=bytesStream.toByteArray();
-                            InputStream gzStream=new GZIPInputStream(new ByteArrayInputStream(gzBytes));
-                            try {
-                                bytesStream.reset();
-                                IOUtils.copyLarge(gzStream, bytesStream);
-                            } finally {
-                                gzStream.close();
-                            }
-                        }
-                        
-                        AsciiLineOutputStream   logStream=new AsciiLineOutputStream() {
-                                @Override
-                                @SuppressWarnings("synthetic-access")
-                                public void writeLineData(CharSequence lineData) throws IOException {
-                                    logger.trace("transferPostedData(" + method + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "] C: " + lineData);
-                                }
-                                
-                                @Override
-                                public boolean isWriteEnabled() {
-                                    return true;
-                                }
-                            };
-                        try {
-                            HexDump.dump(bytesStream.toByteArray(), 0L, logStream, 0);
-                        } finally {
-                            logStream.close();
-                        }
+                if ("gzip".equalsIgnoreCase(encoding)) {
+                    InputStream gzStream=new GZIPInputStream(new ByteArrayInputStream(postedBytes));
+                    try {
+                        postedBytes = IOUtils.toByteArray(gzStream);
+                    } finally {
+                        gzStream.close();
                     }
                 }
-            } finally {
-                ExtendedIOUtils.closeAll(postTarget, bytesStream);
+
+                AsciiLineOutputStream   logStream=new AsciiLineOutputStream() {
+                        @Override
+                        @SuppressWarnings("synthetic-access")
+                        public void writeLineData(CharSequence lineData) throws IOException {
+                            logger.trace("transferPostedData(" + method + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "] C: " + lineData);
+                        }
+                        
+                        @Override
+                        public boolean isWriteEnabled() {
+                            return true;
+                        }
+                    };
+                try {
+                    HexDump.dump(postedBytes, 0L, logStream, 0);
+                } finally {
+                    logStream.close();
+                }
             }
+            
+            return response;
         } finally {
             postData.close();
         }
     }
 
-    private void transferBackendResponse(
-            final RequestMethod method, final HttpServletRequest req, HttpServletResponse rsp, HttpURLConnection conn, Map<String,String>  rspHeaders)
+    private void transferBackendResponse(final HttpServletRequest req, HttpResponse response, HttpServletResponse rsp, Map<String,String>  rspHeaders)
                     throws IOException {
-        final URL       url=conn.getURL();
+        final String    method=req.getMethod();
         OutputStream    rspTarget=rsp.getOutputStream();
         try {
-            InputStream rspData=conn.getInputStream();
+            ByteArrayOutputStream   bytesStream=null;
+            OutputStream            logStream=null;
+            String                  encoding=rspHeaders.get("Content-Encoding");
             try {
-                ByteArrayOutputStream   bytesStream=null;
-                OutputStream            logStream=null;
-                String                  encoding=rspHeaders.get("Content-Encoding");
+                // TODO see what we can do for large amount of data
                 if (logger.isTraceEnabled()) {
                     logStream = new AsciiLineOutputStream() {
                             @Override
@@ -331,39 +325,33 @@ public class GitController extends RefreshedContextAttacher {
                     }
                     rspTarget = new TeeOutputStream(rspTarget, (bytesStream == null) ? logStream : bytesStream);
                 }
-    
-                try {
-                    long    cpyLen=IOUtils.copyLarge(rspData, rspTarget);
-                    if (logger.isTraceEnabled()) {
-                        try {
-                            if (bytesStream != null) {
-                                InputStream gzStream=new GZIPInputStream(new ByteArrayInputStream(bytesStream.toByteArray()));
-                                try {
-                                    IOUtils.copyLarge(gzStream, logStream);
-                                } finally {
-                                    gzStream.close();
-                                }
-                            }
-                        } finally {
-                            logStream.close();  // flush the remaining data in the log stream
-                        }
 
-                        logger.trace("transferBackendResponse(" + method + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "]"
-                                   + " copied " + cpyLen + " bytes from " + url.toExternalForm());
-                        
+                HttpEntity  rspEntity=response.getEntity();
+                rspEntity.writeTo(rspTarget);
+
+                if (logger.isTraceEnabled()) {
+                    try {
+                        if (bytesStream != null) {
+                            InputStream gzStream=new GZIPInputStream(new ByteArrayInputStream(bytesStream.toByteArray()));
+                            try {
+                                IOUtils.copyLarge(gzStream, logStream);
+                            } finally {
+                                gzStream.close();
+                            }
+                        }
+                    } finally {
+                        logStream.close();  // flush the remaining data in the log stream
                     }
-                } finally {
-                    ExtendedIOUtils.closeAll(logStream, bytesStream);
                 }
             } finally {
-                rspData.close();
+                ExtendedIOUtils.closeAll(logStream, bytesStream);
             }
         } finally {
             rspTarget.close();
         }
     }
 
-    private URL resolveTargetRepository(RequestMethod method, HttpServletRequest req) throws IOException {
+    private URI resolveTargetRepository(RequestMethod method, HttpServletRequest req) throws IOException {
         String  op=StringUtils.trimToEmpty(req.getParameter("service")), uriPath=req.getPathInfo();
         if (StringUtils.isEmpty(op)) {
             int pos=uriPath.lastIndexOf('/');
@@ -387,37 +375,19 @@ public class GitController extends RefreshedContextAttacher {
 
         // TODO access an injected resolver that returns the back-end location URL
         String  query=req.getQueryString();
-        if (StringUtils.isEmpty(query)) {
-            return new URL("http://localhost:8080/git-backend/git" + uriPath);
-        } else {
-            return new URL("http://localhost:8080/git-backend/git" + uriPath + "?" + query);
+        try {
+            if (StringUtils.isEmpty(query)) {
+                return new URI("http://localhost:8080/git-backend/git" + uriPath);
+            } else {
+                return new URI("http://localhost:8080/git-backend/git" + uriPath + "?" + query);
+            }
+        } catch(URISyntaxException e) {
+            throw new MalformedURLException(e.getClass().getSimpleName() + ": " + e.getMessage());
         }
-    }
-    
-    // TODO move this to some generic util location
-    private HttpURLConnection openTargetConnection(RequestMethod method, URL url) throws IOException {
-        HttpURLConnection   conn=(HttpURLConnection) url.openConnection();
-        if (conn instanceof HttpsURLConnection) {
-            HttpsURLConnection    https=(HttpsURLConnection) conn;
-            https.setHostnameVerifier(SSLUtils.ACCEPT_ALL_HOSTNAME_VERIFIER);
-            https.setSSLSocketFactory(SSLUtils.ACCEPT_ALL_FACTORY.create());
-        }
-
-        conn.setConnectTimeout(urlRedirectConnectTimeout);
-        conn.setReadTimeout(urlRedirectReadTimeout);
-        conn.setAllowUserInteraction(false);
-        conn.setUseCaches(false);
-        conn.setRequestMethod(method.name());
-        
-        if (RequestMethod.POST.equals(method)) {
-            conn.setDoOutput(true);
-        }
-
-        return conn;
     }
 
     // TODO move this to some generic util location
-    private Map<String,String> copyRequestHeadersValues(HttpServletRequest req, HttpURLConnection conn) {
+    private Map<String,String> copyRequestHeadersValues(HttpServletRequest req, HttpRequestBase request) {
         Map<String,String>  hdrsMap=ServletUtils.getRequestHeaders(req);
         for (Map.Entry<String,String> hdrEntry : hdrsMap.entrySet()) {
             String  hdrName=hdrEntry.getKey(), hdrValue=StringUtils.trimToEmpty(hdrEntry.getValue());
@@ -427,7 +397,7 @@ public class GitController extends RefreshedContextAttacher {
                 
             }
 
-            conn.setRequestProperty(hdrName, hdrValue);
+            request.addHeader(hdrName, hdrValue);
             hdrsMap.put(hdrName, hdrValue);
         }
 
@@ -443,48 +413,27 @@ public class GitController extends RefreshedContextAttacher {
     }
 
     // TODO move this to some generic util location
-    private Map<String,String> copyResponseHeadersValues(HttpURLConnection conn, HttpServletRequest req, HttpServletResponse rsp) {
-        // NOTE: map must be case insensitive as per HTTP requirements
-        Map<String,String>          hdrsMap=new TreeMap<String,String>(String.CASE_INSENSITIVE_ORDER);
-        Map<String,List<String>>    headerFields=conn.getHeaderFields();
-        for (Map.Entry<String,List<String>> hdr : headerFields.entrySet()) {
-            String  hdrName=ServletUtils.capitalizeHttpHeaderName(hdr.getKey());
-            // The response code + message is encoded using an empty header name
-            if (StringUtils.isEmpty(hdrName)) {
-                if (logger.isTraceEnabled()) {
-                    logger.trace("copyResponseHeadersValues(" + req.getMethod() + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "]: " + hdr.getValue());
-                }
-                continue;
-            }
+    private Map<String,String> copyResponseHeadersValues(HttpServletRequest req, HttpMessage response, HttpServletResponse rsp) {
+        Header[]  hdrs=response.getAllHeaders();
+        if (ArrayUtils.isEmpty(hdrs)) {
+            logger.warn("copyResponseHeadersValues(" + req.getMethod() + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "] no headers");
+            return Collections.emptyMap();
+        }
 
-            List<String>    values=hdr.getValue();
-            if (ExtendedCollectionUtils.isEmpty(values)) {
+        // NOTE: map must be case insensitive as per HTTP requirements
+        Map<String,String>  hdrsMap=new TreeMap<String,String>(String.CASE_INSENSITIVE_ORDER);
+        for (Header hdrEntry : hdrs) {
+            // TODO add support for multi-valued headers
+            String  hdrName=ServletUtils.capitalizeHttpHeaderName(hdrEntry.getName()), hdrValue=StringUtils.trimToEmpty(hdrEntry.getValue());
+            if (StringUtils.isEmpty(hdrValue)) {
                 logger.warn("copyResponseHeadersValues(" + req.getMethod() + ")[" + req.getRequestURI() + "][" + req.getQueryString() + "]"
                           + " no value for header " + hdrName);
                 rsp.setHeader(hdrName, "");
                 continue;
             }
 
-            if (values.size() == 1) {
-                String  hdrValue=values.get(0);
-                if (StringUtils.isEmpty(hdrValue)) {
-                    continue;
-                }
-
-                rsp.setHeader(hdrName, hdrValue);
-                hdrsMap.put(hdrName, hdrValue);
-            } else {
-                for (int index=0; index < values.size(); index++) {
-                    String  hdrValue=values.get(index);
-                    if (StringUtils.isEmpty(hdrValue)) {
-                        continue;   // unexpected, but ignored
-                    }
-
-                    rsp.addHeader(hdrName, hdrValue);
-                }
-
-                hdrsMap.put(hdrName, StringUtils.join(values, ','));
-            }
+            rsp.setHeader(hdrName, hdrValue);
+            hdrsMap.put(hdrName, hdrValue);
         }
         
         if (logger.isTraceEnabled()) {
@@ -496,6 +445,16 @@ public class GitController extends RefreshedContextAttacher {
         }
 
         return hdrsMap;
+    }
+
+    static final HttpRequestBase resolveRequest (RequestMethod method, URI uri) {
+        if (RequestMethod.GET.equals(method)) {
+            return new HttpGet(uri);
+        } else if (RequestMethod.POST.equals(method)) {
+            return new HttpPost(uri);
+        } else { // TODO add support for HEAD, OPTIONS, TRACE, PUT if necessary
+            throw new UnsupportedOperationException(uri.toString()+ " - unknown method: " + method);
+        }
     }
 
     // TODO move this to some generic util location
